fixed up the spacing on forms, devise is using formtastic now. cleaned up navigation until we have speakers, etc.

--- a/app/stylesheets/application.sass
+++ b/app/stylesheets/application.sass
@@ -107,6 +107,8 @@ h1, h2, h3, h4, h5
 #content
   h1, h2, h3, h4, h5
     font-weight: bolder
+  h4
+    margin-bottom: 16px
   .show
     margin-top: 16px
     margin-bottom: 32px
@@ -330,7 +332,9 @@ li.schedule
     color: white
     text-shadow: 0 0 12px $c-left-66
 
-form.formtastic.submission
+form.formtastic
+  label
+    color: $c-left-66
   fieldset.inputs
     legend
       span
