--- a/app/stylesheets/submissions.sass
+++ b/app/stylesheets/submissions.sass
@@ -15,6 +15,4 @@
     strong
       font-weight: bolder
 
-label
-  color: $c-left-66
 
